Fixed : DO-8466 - 2.0.5 parallel [My content - Collection]UI: In "Add a Resource" popup, Minimize button is misaligned at "Access Hazard"

--- a/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/tab/resource/item/CollectionEditResource.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/tab/resource/item/CollectionEditResource.css
@@ -2926,8 +2926,8 @@ margin-top: 18px; */
 .accessHazard {
 	font-size: 12px !important;
 	padding: 5px 0px;
-	border-bottom: 1px solid #CCC;
 	width: 74%;
+	display: inline-block;
 	margin-bottom: 8px;
 }
 
